--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -23,11 +23,19 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            />
 
         <service android:name=".ActivityRecognizedService" />
 
-        <activity android:name=".ShowRecords"></activity>
+        <activity android:name=".ShowRecords" />
+        <activity android:name=".SettingsActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/app_name">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"
+            /> </activity>
     </application>
 
 </manifest>
