--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:+'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+
     compile 'com.android.support:preference-v7:+'
     //compile 'com.google.android.gms:play-services:11.4.2'
     compile 'com.google.android.gms:play-services:8.4.0'
