--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -23,19 +23,20 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            />
+            android:label="@string/app_name" />
 
         <service android:name=".ActivityRecognizedService" />
 
         <activity android:name=".ShowRecords" />
-        <activity android:name=".SettingsActivity"
-            android:parentActivityName=".MainActivity"
-            android:label="@string/app_name">
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"
-            /> </activity>
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".PieChart"></activity>
     </application>
 
 </manifest>
