--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -16,6 +16,8 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
+
     }
 }
 
