--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -27,16 +27,22 @@
 
         <service android:name=".ActivityRecognizedService" />
 
-        <activity android:name=".ShowRecords" />
+        <activity
+            android:name=".ShowRecordsActivity"
+            android:label="@string/database_details"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/app_name"
+            android:label="@string/settings"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".PieChart"></activity>
+        <activity
+            android:name=".PieChartActivity"
+            android:label="@string/piechart"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
